<resources>
    <string name="app_name">My Voting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list_users">List users</string>
    <string name="menu_voting">Voting</string>
    <string name="menu_add_new_user">Add new user</string>
    <string name="menu_information">Information</string>
    <string name="menu_send">Send</string>
    <string name="hint_button_for_recycler">button for recycler</string>
    <string name="text_the_worst_button">Плохая оценка</string>
    <string name="text_good_button">Хорошая оценка</string>
    <string name="text_the_best_button">Самая лучшая оценка</string>
    <string name="input_name">Введите имя</string>
    <string name="add_new_users">Добавить нового пользователя</string>
    <string name="add_new_user">Add new user</string>
    <string name="communicate">Communicate</string>
    <string name="text_list_users_fragment">This is home fragment</string>
    <string name="image_for_information_fragment">Image for information fragment</string>
    <string name="text_for_user_voting">Thanks for your vote</string>

    <string name="information">Hello, my friend!!! \n I use some libraries in this app. \n
        RxJava/RxAndroid \n Moxy \n Room \n Retrofit2  </string>
    <string name="this_is_list_fragment">This is list fragment</string>
</resources>
