<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list_users"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_list_users" />
        <item
            android:id="@+id/nav_voting"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_voting" />
        <item
            android:id="@+id/nav_add_new_user"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/add_new_user" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_information"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_information" />
        </menu>
    </item>

</menu>
